third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/inline-table/bad-key-syntax.stderr
TOML parse error at line 1, column 14
  |
1 | tbl = { a = 1, [b] }
  |              ^
invalid inline table
expected `}`
